--- a/public/index.html
+++ b/public/index.html
@@ -865,6 +865,127 @@
         </section>
         <!-- best review eee -->
 
+        <section class="labs-price">
+          <div class="labs-price__inner l-center">
+            <div class="obj1">
+              <img src="assets/images/img/labs-r-01.png" alt="로고 이미지">
+            </div>
+            <div class="obj2">
+              <img src="assets/images/img/labs-r-02.png" alt="로고 이미지">
+            </div>
+            <div class="labs-price__tit-wrap">
+              <div class="title">
+                <div class="title__tit white">Insta labs price</div>
+                <div class="title__txt white">
+                  인스타그램 규정을 준수하며, <br>
+                  지속적 알고리즘 주시 및 업데이트를 통한 <br>
+                  안전한 서비스를 제공합니다.
+                </div>
+              </div>
+            </div>
+
+            <!-- com-card -->
+            <div class="com-card">
+              <div class="com-card__list">
+                <div class="com-card__item">
+                  <div class="com-card__item--tit">
+                    최적화 시스템
+                  </div>
+                  <div class="com-card__item--app">
+                    월 단위 신청가능
+                  </div>
+                  <div class="com-card__item--price">
+                    월
+                    <span class="bold">400,000P</span>
+                  </div>
+                  <div class="com-card__item--txt">
+                    최적화 된 AI를 통한 <br>
+                    인스타랩스 최적화 시스템 <br>
+                    사용을 위해서는 계정등록을 <br>
+                    하셔야 합니다.
+                  </div>
+                  <div class="input-box">
+                    <input type="radio" class="input chk-box" id="chk01" name="chks">
+                    <label for="chk01" class="chk-icon"></label>
+                  </div>
+                </div>
+                <div class="com-card__item">
+                  <div class="com-card__item--tit">
+                    최적화 시스템
+                  </div>
+                  <div class="com-card__item--app">
+                    월 단위 신청가능
+                  </div>
+                  <div class="com-card__item--price">
+                    월
+                    <span class="bold">400,000P</span>
+                  </div>
+                  <div class="com-card__item--txt">
+                    최적화 된 AI를 통한 <br>
+                    인스타랩스 최적화 시스템 <br>
+                    사용을 위해서는 계정등록을 <br>
+                    하셔야 합니다.
+                  </div>
+                  <div class="input-box">
+                    <input type="radio" class="input chk-box" id="chk02" name="chks">
+                    <label for="chk02" class="chk-icon"></label>
+                  </div>
+                </div>
+                <div class="com-card__item">
+                  <div class="com-card__item--tit">
+                    최적화 시스템
+                  </div>
+                  <div class="com-card__item--app">
+                    월 단위 신청가능
+                  </div>
+                  <div class="com-card__item--price">
+                    월
+                    <span class="bold">400,000P</span>
+                  </div>
+                  <div class="com-card__item--txt">
+                    최적화 된 AI를 통한 <br>
+                    인스타랩스 최적화 시스템 <br>
+                    사용을 위해서는 계정등록을 <br>
+                    하셔야 합니다.
+                  </div>
+                  <div class="input-box">
+                    <input type="radio" class="input chk-box" id="chk03" name="chks">
+                    <label for="chk03" class="chk-icon"></label>
+                  </div>
+                </div>
+                <div class="com-card__item">
+                  <div class="com-card__item--tit">
+                    최적화 시스템
+                  </div>
+                  <div class="com-card__item--app">
+                    월 단위 신청가능
+                  </div>
+                  <div class="com-card__item--price">
+                    월
+                    <span class="bold">400,000P</span>
+                  </div>
+                  <div class="com-card__item--txt">
+                    최적화 된 AI를 통한 <br>
+                    인스타랩스 최적화 시스템 <br>
+                    사용을 위해서는 계정등록을 <br>
+                    하셔야 합니다.
+                  </div>
+                  <div class="input-box">
+                    <input type="radio" class="input chk-box" id="chk04" name="chks">
+                    <label for="chk04" class="chk-icon"></label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- com-card eee -->
+
+            <div class="btn-wrap">
+              <button class="btn btn-sm btn-border-red btn-rdi-rounded">서비스 신청</button>
+            </div>
+
+          </div>
+        </section>
+
 
 
       </div>
