메인 작업내용 push

--- a/public/index.html
+++ b/public/index.html
@@ -865,6 +865,7 @@
         </section>
         <!-- best review eee -->
 
+        <!-- labs-price -->
         <section class="labs-price">
           <div class="labs-price__inner l-center">
             <div class="obj1">
@@ -911,20 +912,21 @@
                 </div>
                 <div class="com-card__item">
                   <div class="com-card__item--tit">
-                    최적화 시스템
+                    한국인 팔로우
                   </div>
                   <div class="com-card__item--app">
-                    월 단위 신청가능
+                    최소 30명부터 신청가능
                   </div>
                   <div class="com-card__item--price">
-                    월
-                    <span class="bold">400,000P</span>
+                    명 당
+                    <span class="bold">200P</span>
                   </div>
                   <div class="com-card__item--txt">
-                    최적화 된 AI를 통한 <br>
-                    인스타랩스 최적화 시스템 <br>
-                    사용을 위해서는 계정등록을 <br>
-                    하셔야 합니다.
+                    이질감 없는 팔로워 증가를 <br>
+                    통한 계정 활성화
+                  </div>
+                  <div class="com-card__item--txt02">
+                    회원 가입 후 서비스 신청 가능
                   </div>
                   <div class="input-box">
                     <input type="radio" class="input chk-box" id="chk02" name="chks">
@@ -933,20 +935,22 @@
                 </div>
                 <div class="com-card__item">
                   <div class="com-card__item--tit">
-                    최적화 시스템
+                    한국인 댓글
                   </div>
                   <div class="com-card__item--app">
-                    월 단위 신청가능
+                    최소 3개부터 신청가능
                   </div>
                   <div class="com-card__item--price">
-                    월
-                    <span class="bold">400,000P</span>
+                    개 당
+                    <span class="bold">400P</span>
                   </div>
                   <div class="com-card__item--txt">
-                    최적화 된 AI를 통한 <br>
-                    인스타랩스 최적화 시스템 <br>
-                    사용을 위해서는 계정등록을 <br>
-                    하셔야 합니다.
+                    실제 유저들의 데이터를 <br>
+                    이용한 관리 시스템 <br>
+                    제한없는 퀄리티업
+                  </div>
+                  <div class="com-card__item--txt02">
+                    회원 가입 후 서비스 신청 가능
                   </div>
                   <div class="input-box">
                     <input type="radio" class="input chk-box" id="chk03" name="chks">
@@ -955,20 +959,22 @@
                 </div>
                 <div class="com-card__item">
                   <div class="com-card__item--tit">
-                    최적화 시스템
+                    한국인 댓글
                   </div>
                   <div class="com-card__item--app">
-                    월 단위 신청가능
+                    최소 3개부터 신청가능
                   </div>
                   <div class="com-card__item--price">
-                    월
-                    <span class="bold">400,000P</span>
+                    개 당
+                    <span class="bold">400P</span>
                   </div>
                   <div class="com-card__item--txt">
-                    최적화 된 AI를 통한 <br>
-                    인스타랩스 최적화 시스템 <br>
-                    사용을 위해서는 계정등록을 <br>
-                    하셔야 합니다.
+                    실제 유저들의 데이터를 <br>
+                    이용한 관리 시스템 <br>
+                    제한없는 퀄리티업
+                  </div>
+                  <div class="com-card__item--txt02">
+                    회원 가입 후 서비스 신청 가능
                   </div>
                   <div class="input-box">
                     <input type="radio" class="input chk-box" id="chk04" name="chks">
@@ -985,8 +991,178 @@
 
           </div>
         </section>
+        <!-- labs-price eee -->
+
+        <!-- Labs people -->
+        <section class="labs-people">
+          <div class="labs-people__inner l-center">
+            <div class="title">
+              <div class="title__tit block">Labs people</div>
+              <div class="title__txt block">
+                Labs people들을 위한, <br>
+                인스타랩스
+              </div>
+            </div>
+            <ul class="labs-people__card">
+              <li class="labs-people__item">
+                <a href="#">
+                  <div class="labs-people__txt-wrap">
+                    <div class="labs-people__txt-wrap-txt">
+                      인스타그램 자체에서 <br>
+                      설정한 로그와 인스타랩스의 <br>
+                      ISP & AV 솔루션 연동을 <br>
+                      통한 인기게시물에 도달하기 <br>
+                      까지의 수월한 로드맵 제공
+                    </div>
+                    <div class="labs-people__txt-wrap-tit">ISP & AV 솔루션</div>
+                  </div>
+                </a>
+              </li>
+              <li class="labs-people__item">
+                <a href="#">
+                  <div class="labs-people__txt-wrap">
+                    <div class="labs-people__txt-wrap-txt">
+                      빅데이터 분석에 있어 <br>
+                      인스타랩스 자체 프로그램을 <br>
+                      통한 수집 된 데이터의 <br>
+                      유효성 및 정확성 검증 진행
+                    </div>
+                    <div class="labs-people__txt-wrap-tit">빅데이터</div>
+                  </div>
+                </a>
+              </li>
+              <li class="labs-people__item">
+                <a href="#">
+                  <div class="labs-people__txt-wrap">
+                    <div class="labs-people__txt-wrap-txt">
+                      더 높은 수준의 <br>
+                      지속적 마케팅 퍼포먼스를 <br>
+                      위해 본사에서 직접 미팅을 <br>
+                      조율하는 국내 유일 <br>
+                      프리미엄 서비스 제공
+                    </div>
+                    <div class="labs-people__txt-wrap-tit">적합 심사</div>
+                  </div>
+                </a>
+              </li>
+              <li class="labs-people__item">
+                <a href="#">
+                  <div class="labs-people__txt-wrap">
+                    <div class="labs-people__txt-wrap-txt">
+                      사용자 서로의 사업영역을 <br>
+                      극대화하고 서로 win-win <br>
+                      전략을 실현하기 위한 <br>
+                      랩스 피플 커뮤니티 운영
+                    </div>
+                    <div class="labs-people__txt-wrap-tit">생업 커뮤니티</div>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </section>
+        <!-- Labs people eee -->
+
+        <!-- community -->
+        <section class="community">
+          <div class="community__inner l-center">
+            <div class="community__info">
+              <div class="community__txt-wrap">
+                <div class="title">
+                  <div class="title__tit block">Labs people community</div>
+                  <div class="title__txt">
+                    SNS 인플루언서를 위한, <br>
+                    오토 딥러닝 마케팅 서비스
+                  </div>
+                </div>
+                <div class="review">
+                  <a href="#" class="review__more-btn--community">
+                    <!-- <img src="assets/images/img/more-btn.svg" alt="리뷰 더보기"> -->
+                  </a>
+                </div>
+              </div>
+
+              <div class="com-table">
+                <table>
+                  <tr>
+                    <td class="date">20.10.28</td>
+                    <td class="heart">
+                      <img src="assets/images/img/heart-off.svg" alt="하트이미지">
+                      284
+                    </td>
+                    <td class="in-txt">
+                      인스타랩스 이용 매뉴얼 확인하기 클릭하세요
+                    </td>
+                    <td class="id">
+                      <img src="assets/images/img/profile-img.svg" alt="프로필 이미지">
+                      ID
+                      <span class="txt-id">***</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="date">20.10.28</td>
+                    <td class="heart">
+                      <img src="assets/images/img/heart-off.svg" alt="하트이미지">
+                      284
+                    </td>
+                    <td class="in-txt">
+                      인스타랩스 이용 매뉴얼 확인하기 클릭하세요
+                    </td>
+                    <td class="id">
+                      <img src="assets/images/img/profile-img.svg" alt="프로필 이미지">
+                      ID
+                      <span class="txt-id">***</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="date">20.10.28</td>
+                    <td class="heart">
+                      <img src="assets/images/img/heart-off.svg" alt="하트이미지">
+                      284
+                    </td>
+                    <td class="in-txt">
+                      인스타랩스 이용 매뉴얼 확인하기 클릭하세요
+                    </td>
+                    <td class="id">
+                      <img src="assets/images/img/profile-img.svg" alt="프로필 이미지">
+                      ID
+                      <span class="txt-id">***</span>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- community eee -->
 
 
+        <footer class="footer">
+          <div class="footer__inner l-center">
+            <div class="footer__inner--top">
+              <a href="#" class="footer__inner--top-link">개인정보처리방침</a>
+              <a href="#" class="footer__inner--top-link">구매안내</a>
+              <a href="#" class="footer__inner--top-link">이용약관</a>
+            </div>
+
+            <div class="footer__inner--mid">
+              <p class="footer__inner--mid-company">주식회사 닥터노드</p>
+              <p class="footer__inner--mid-represent">
+                대표자 <span class="line">|</span> 박현수
+              </p>
+              <div class="footer__inner--mid-txt">
+                <p> 대표번호 070-7799-9777 / 010-2572-2852</p>
+                <p> 사업자등록번호 193-87-01485</p>
+                <p> 통신판매업신고번호 2020-인천부평-1577호</p>
+                <p class="last"> 인천 부평구 길주로 623 대덕리치아노</p>
+              </div>
+            </div>
+            <p class="footer__inner--copy">
+              copyright Instalabs. All Rights Reserved.
+            </p>
+          </div>
+        </footer>
 
       </div>
       <!-- END page -->
