--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,10 @@
   <link rel="stylesheet" href="assets/css/vendors/swiper.min.css">
   <link rel="stylesheet" href="assets/css/custom/ui.css">
 
+  <!-- 제이쿼리 -->
+  <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+    crossorigin="anonymous"></script>
+
   <!-- script link -->
   <script src="assets/js/vendors/swiper.min.js"></script>
 </head>
