lcy 작업내용 commit

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         <header class="header">
           <div class="header__inner l-center">
             <h1 class="logo">
-              <a href="#">
+              <a href="index.html">
                 <img src="assets/images/img/logo.png" alt="로고 이미지">
               </a>
             </h1>
@@ -135,26 +135,337 @@
             <div class="visual__slide-bg">
               <div class="visual__slide-wrap main-visual swiper-container">
                 <div class="visual__slide--list swiper-wrapper">
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img2.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img3.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img4.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img5.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img6.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img7.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img8.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img7.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
+                  <!-- item -->
                   <div class="visual__slide--item swiper-slide">
+                    <div class="visual__slide--item-top">
+                      <img src="assets/images/img/vis-top-icon1.png" alt="카메라이미지" class="vis-top-icon">
+                      <img src="assets/images/img/vis-top-logo.png" alt="로고이미지" class="vis-top-logo">
+                      <img src="assets/images/img/vis-top-icon2.png" alt="채팅이미지" class="vis-top-icon2">
+                    </div>
+                    <div class="visual__slide--item-img">
+                      <!-- 이미지 삽입 w:174 h205 -->
+                      <img src="assets/images/img/vis-mid-img8.png" alt="" class="vis-top-icon2">
+                      <!-- 이미지 삽입 eee-->
+                    </div>
+                    <div class="visual__slide--item-bot">
+                      <img src="assets/images/img/vis-top-icon3.png" alt="카메라이미지" class="vis-top-icon3">
+                      <img src="assets/images/img/vis-top-icon4.png" alt="카메라이미지" class="vis-top-icon4">
+
+                      <!-- 좋아요 db 삽입 -->
+                      <p class="is-txt">
+                        좋아요
+                        <span class="is-num">410</span>개
+                      </p>
+                      <!-- 좋아요 db 삽입 eee -->
+                    </div>
+
+                    <div class="visual__slide--item-tag">
+                      <p class="is-txt">
+                        Instagram
+                      </p>
+                      <span class="is-tag"># 뷰티</span>
+                      <span class="is-tag on"># 운동</span>
+                    </div>
                   </div>
+                  <!-- item -->
                 </div>
 
                 <!-- 네비게이션 지정 -->
